<resources>
    <string name="app_name">一个按钮</string>
    <string name="title_notifications">通知</string>
    <string name="title_home">首页</string>
    <string name="title_post">帖子</string>
    <string name="title_map">地图</string>
    <string name="title_account">我的</string>
    <string name="enable">启用</string>
    <string name="disable">禁用</string>
    <string name="locate">定位</string>
    <string name="permission_denied">权限被拒绝</string>
    <string name="more">更多</string>
    <string name="account_default_name">尚未登录</string>
    <string name="account_default_hardware">无</string>
    <string name="account_default_id">无</string>
    <string name="hardware_id">硬件号：</string>
    <string name="login">登录</string>
    <string name="email">邮箱</string>
    <string name="password">密码</string>
    <string name="forgot_password">忘记密码</string>
    <string name="email_invalid">请输入有效的邮箱地址</string>
    <string name="password_invalid">密码必须大于等于6位</string>
    <string name="register">注册</string>
    <string name="login_failed">登录失败</string>
    <string name="login_success">登录成功</string>
    <string name="login_incorrect">邮箱或密码错误</string>
    <string name="unknown_error">未知错误</string>
    <string name="id">ID：</string>
    <string name="confirm_logout">确定退出登录？</string>
    <string name="cancel">取消</string>
    <string name="confirm">确定</string>
    <string name="notification_empty">无通知</string>
    <string name="post_empty">无</string>
    <string name="action_refresh">刷新</string>
    <string name="refresh_success">刷新成功</string>
    <string name="image">图片</string>
    <string name="setting">设置</string>
    <string name="server_setting">添加服务器</string>
    <string name="not_login">未登录</string>
    <string name="success">成功</string>
    <string name="post_detail">详情</string>
    <string name="title">标题</string>
    <string name="content">内容</string>
    <string name="bind_hardware">绑定硬件</string>
    <string name="set_tag">设置标签</string>
    <string name="tag">标签:</string>
    <string name="work_empty">无工作</string>
    <string name="title_work">工作</string>
    <string name="private_notification">与我相关</string>
    <string name="global_notification">全局通知</string>
    <string name="loading">加载中…</string>
    <string name="send">发送</string>
    <string name="input_message">请输入消息</string>
    <string name="anonymous">匿名</string>
    <string name="new_chat">新沟通</string>
    <string name="chat">沟通</string>
    <string name="unknown">未知</string>
</resources>