<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/account_card_background"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            app:cardCornerRadius="16dp"
            app:cardElevation="1dp">

            <LinearLayout
                android:id="@+id/account_background"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingLeft="16dp"
                android:paddingTop="24dp"
                android:paddingRight="16dp"
                android:paddingBottom="24dp">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/account_avatar"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:src="@drawable/ic_account" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="8dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/account_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/account_default_name"
                        android:textColor="?attr/colorOnPrimary"
                        android:textSize="20sp"
                        app:layout_constraintTop_toTopOf="parent" />

                    <LinearLayout
                        android:id="@+id/account_id_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        app:layout_constraintBottom_toTopOf="@id/account_hardware_layout"
                        app:layout_constraintTop_toBottomOf="@id/account_name">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/id"
                            android:textSize="14sp" />

                        <TextView
                            android:id="@+id/account_id"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/account_default_hardware"
                            android:textSize="14sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/account_hardware_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        app:layout_constraintBottom_toBottomOf="parent">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/hardware_id"
                            android:textSize="14sp" />

                        <TextView
                            android:id="@+id/account_hardware"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/account_default_hardware"
                            android:textSize="14sp" />

                    </LinearLayout>

                </androidx.constraintlayout.widget.ConstraintLayout>

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="32dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="4dp"
                    android:contentDescription="@string/more"
                    android:scaleType="fitXY"
                    android:src="@drawable/ic_chevron_right"
                    app:tint="@color/gray" />

            </LinearLayout>


        </androidx.cardview.widget.CardView>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/type_card_background"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/account_card_background">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            app:cardCornerRadius="16dp"
            app:cardElevation="1dp">

        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/item_card_background"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/type_card_background">

        <LinearLayout
            android:id="@+id/settings_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:background="?android:selectableItemBackground">

            <ImageView
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_margin="8dp"
                android:contentDescription="@string/image"
                android:src="@drawable/ic_settings" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:text="@string/setting"
                android:textSize="20sp" />

        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>